# vec3

./: .gitignore  CMakeLists.txt  compile_flags.txt
include/vec3/: batch.h  buffers.h  macros.h  material.h  matrix.h  quat.h  triangle.h  triangle_buffer.h  util.h  vec3.h  vector3_buffer.h  vector4_buffer.h
src/: batch.c  buffers.c  main.c  matrix.c  quat.c  triangle.c  triangle_buffer.c  util.c  vec3.c  vector3_buffer.c  vector4_buffer.c
